--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "lucide-react": "^0.494.0",
     "next-themes": "^0.4.6",
     "react-i18next": "^15.4.1",
+    "react-router": "^7.5.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
