--- a/package.json
+++ b/package.json
@@ -53,10 +53,14 @@
     "@codemirror/basic-setup": "^0.20.0",
     "@codemirror/highlight": "^0.19.8",
     "@codemirror/lang-javascript": "^6.2.3",
+    "@codemirror/language": "^6.11.0",
     "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.36.3",
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "@lezer/generator": "^1.7.3",
+    "@lezer/highlight": "^1.2.1",
+    "@lezer/lr": "^1.4.2",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-checkbox": "^1.1.5",
